--- a/public/style.css
+++ b/public/style.css
@@ -1,12 +1,11 @@
 * {
-  padding: 0;
   margin: 50px;
   text-align: center;
-  background: wheat;
+  background: white;
   font-family: sans-serif;
 }
 
 h1 {
-  font-size: 50px;
+  font-size: 30px;
   color: brown;
 }
